Feature/update tests